# airflow-posit-connect

./: .env.dev  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_deploy.py
.github/workflows/: ci.yml
airflow-connect/: airflow_connect-0.0.1-py3-none-any.whl  index.html
airflow_connect/: api.py  cli.py  connect_operator.py
airflow_connect/tests/: conftest.py  test_api.py
airflow_connect/tests/ipynb_report/: test_report3.ipynb
airflow_connect/tests/rmd_failing_report/: rmd_failing_report.Rmd
airflow_connect/tests/rmd_report/: report_rmd.Rmd
docs/: index.html
example/airflow/: .gitignore
script/setup-rsconnect/: dump_api_keys.py  rstudio-connect.gcfg
